err/mononcle-menu.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mononcle_menu'...
Listing './lib/python3.5/site-packages/mononcle_menu/fixtures'...
Compiling './lib/python3.5/site-packages/mononcle_menu/models.py'...
***   File "./lib/python3.5/site-packages/mononcle_menu/models.py", line 6
    anchor = models.CharField(max_length=255, 'ID элемента куда будет вести ссылка')
                                             ^
SyntaxError: positional argument follows keyword argument

Listing './lib/python3.5/site-packages/mononcle_menu/static'...
Listing './lib/python3.5/site-packages/mononcle_menu/static/mononcle_menu'...
Listing './lib/python3.5/site-packages/mononcle_menu/templates'...
Listing './lib/python3.5/site-packages/mononcle_menu/templates/mononcle_menu'...
Listing './lib/python3.5/site-packages/mononcle_menu-0.1.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
